SENSEFY-1458, Did you mean alignment, Entity issue.

--- a/sensefy-ui/src/main/ui-source/app/styles/master.css
+++ b/sensefy-ui/src/main/ui-source/app/styles/master.css
@@ -242,7 +242,6 @@ sub, sup {
 }
 
 .suggestions-wrapper .suggestion {
-    min-height: 10px;
     padding: 8px 15px 8px 6px;
     background-color: #fff;
     border-top: 1px solid #b0defd;
